Version 1.2.3 - xx xxx 2008

  * Added test-network target and httpServer to test actual 
    network activity in the test harness.

Version 1.2.2 - 29 Aug 2008

  * Updated KeyValueResponse parsing to allow for ISO characters.
    Ticket #40.

  * Consider http response of "0" to be successful. It is possible
    with the streaming enhancement to see no status if the http
    transaction hasn't yet completed. Ticket #62.

  * Correct regression with logging GetObject calls per Ticket #36.
    The streaming enhancement caused GetObject calls to always be
    logged.
    Ticket #63.

  * Enhanced .NET Search to include switch configurable options
    such that it can be included for debugging purposes on the
    Windows binary builds. Added RetsSession::GetLibraryVersion()
    to return a string of the current libRETS version.
    Ticket #64.

  * Added static GetLibraryVersion to RetsSession.
    Ticket #65.

  * Added API documentation and a new switch to "configure" that
    controls whether user or maintainer documentation is produced.

  * Added http proxy capability through RetsSession::SetProxy.
    Ticket #66

  * Improved exception handling so more detailed error information
    could be returned to .NET languages. Added RetsHttpException
    to handle cURL/http exceptions.
    Modeled on patch supplied by Tony Manhollan.
    Ticket #67.

  * Added some additional checking to the http transaction flow in an attempt
    to masquerade networking issues as 503 (service unavailable) erorrs when
    libCURL returns a zero status to us.
    Ticket #69.

  * Revised http logging methodology for SWIG bound languages and
    updated developer documentation accordingly. For all SWIG languages,
    RetsSession::SetHttpLogName("log.name") is all that is needed to 
    invoke http logging. Legacy usage is still supported.

  * Revised Librets-Version header to be "X-Librets-Version".

  * libCURL requirement updated to 7.18.2 to avoid some bugs in curl
